# futureminal2

./: README.md
app/: Cargo.toml
crates/futureminal/: Cargo.toml
crates/futureminal-ai/: Cargo.toml
crates/futureminal-ai/src/: audit.rs  lib.rs  provider.rs  router.rs  sanitizer.rs
crates/futureminal-blockchain/: Cargo.toml
crates/futureminal-blockchain/src/: adapter.rs  audit.rs  lib.rs  provenance.rs  vault.rs
crates/futureminal-core/: Cargo.toml
crates/futureminal-core/src/: config.rs  grid.rs  keymap.rs  lib.rs  pty.rs  session.rs  shell.rs  theme.rs  vt.rs  windowing.rs
crates/futureminal-ipc/: Cargo.toml
crates/futureminal-ipc/src/: lib.rs  server.rs
crates/futureminal-plugin/: Cargo.toml
crates/futureminal-plugin/src/: lib.rs
crates/futureminal-renderer/: Cargo.toml
crates/futureminal-renderer/src/: lib.rs  shader.wgsl
crates/futureminal/src/: main.rs
