[package]
name = "futureminal-ai"
version = "0.1.0"
edition = "2021"
authors.workspace = true
license.workspace = true
repository = "https://github.com/dungnotnull/futureminal"

[dependencies]
tokio = { workspace = true, features = ["full", "full"] }
serde = { workspace = true }
reqwest = { workspace = true }
async-openai = "0.27"
tracing = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
regex = { workspace = true }
hex = { workspace = true }
ring = "0.17"
async-trait = "0.1"
serde_json = { workspace = true }
anyhow = { workspace = true }
dirs = { workspace = true }
futures-util = { workspace = true }
bytes = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.6"

